--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,17 @@
+# Node modules
+node_modules/
+
+# Build outputs
+build/
+dist/
+
+# Env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
 logs
 *.log
@@ -22,3 +36,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# OS files
+.DS_Store
+Thumbs.db
